--- a/themes/next/assets/scss/sections/simple.scss
+++ b/themes/next/assets/scss/sections/simple.scss
@@ -9,10 +9,11 @@
             --color: var(--text);
             display: block;
             line-height: 24px;
+            font-size: 14px;
             svg {
-                width: 20px;
-                height: 20px;
-                margin: 2px 2px 2px 0;
+                width: 18px;
+                height: 18px;
+                margin: 3px 0;
                 display: inline-block;
                 vertical-align: top;
             }
