--- a/themes/next/assets/scss/sections/list.scss
+++ b/themes/next/assets/scss/sections/list.scss
@@ -11,6 +11,9 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @include max(xxs) {
+            padding: 12px;
+        }
         h3 {
             margin: 0;
         }
@@ -18,6 +21,9 @@
     footer {
         padding: 16px 20px;
         border-top: 1px solid var(--line);
+        @include max(xxs) {
+            padding: 12px;
+        }
         .paginate {
             margin: 0;
             padding: 0;
@@ -36,6 +42,9 @@
         background: var(--pale-light);
         border-top: 1px solid var(--line);
         border-bottom: 1px solid var(--line);
+        @include max(sm) {
+            display: none;
+        }
         ul {
             margin: 0;
             padding: 8px 20px;
@@ -58,6 +67,14 @@
             display: grid;
             align-items: center;
             grid-template-columns: repeat(3, minmax(0, 1fr)) 160px;
+            @include max(sm) {
+                &:first-child {
+                    border-top: 1px solid var(--line);
+                }
+            }
+            @include max(xxs) {
+                padding: 12px;
+            }
             &:not(:last-child) {
                 border-bottom: 1px solid var(--line);
             }
@@ -74,6 +91,22 @@
                     & > * {
                         &:not(:last-child) {
                             margin-right: 12px;
+                        }
+                    }
+                    .switch {
+                        @include max(xxs) {
+                            padding: 6px;
+                            span {
+                                display: none;
+                            }
+                            svg {
+                                left: auto;
+                                right: auto;
+                                display: block;
+                                width: 19px;
+                                margin: 2px;
+                                height: 19px;
+                            }
                         }
                     }
                 }
@@ -147,6 +180,89 @@
         & > ul {
             & > li {
                 grid-template-columns: 80px minmax(0, 1fr) 160px;
+                @include max(sm) {
+                    grid-template-columns: minmax(0, 1fr) 160px;
+                }
+                @include max(xxs) {
+                    grid-template-columns: minmax(0, 1fr) 100px;
+                }
+                .status {
+                    @include max(sm) {
+                        grid-column: 1;
+                        grid-row: 1;
+                    }
+                    & > a,
+                    & > span {
+                        @include max(sm) {
+                            display: inline-flex;
+                            align-items: center;
+                            justify-content: flex-start;
+                            vertical-align: top;
+                            svg {
+                                width: 16px;
+                                height: 16px;
+                                margin-right: 4px;
+                            }
+                        }
+                        strong {
+                            font-weight: normal;
+                            font-size: 14px;
+                            display: block;
+                            @include min(sm) {
+                                display: none;
+                            }
+                        }
+                    }
+                    & > a {
+                        strong {
+                            color: var(--primary);
+                        }
+                    }
+                }
+                .user {
+                    @include max(sm) {
+                        grid-column: 1;
+                        grid-row: 2;
+                    }
+                }
+                & > div {
+                    &:last-child {
+                        @include max(sm) {
+                            grid-column: 2;
+                            grid-row: 1 / 3;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    &.adminlist {
+        & > ul {
+            & > li {
+                @include max(sm) {
+                    grid-template-columns: minmax(0, 1fr) 160px;
+                }
+                @include max(xxs) {
+                    grid-template-columns: minmax(0, 1fr) 100px;
+                }
+                .username {
+                    @include max(sm) {
+                        line-height: 24px;
+                    }
+                    small {
+                        display: block;
+                        color: var(--text);
+                        @include min(sm) {
+                            display: none;
+                        }
+                    }
+                }
+                .created_by,
+                .created_on {
+                    @include max(sm) {
+                        display: none;
+                    }
+                }
             }
         }
     }
