first form, language change

--- a/themes/next/assets/scss/components/messages.scss
+++ b/themes/next/assets/scss/components/messages.scss
@@ -39,9 +39,9 @@
 
 .message-container {
     .message {
-        margin: 16px 0;
+        margin: 20px 0 32px 0;
         @include max(xs) {
-            margin: 12px 0;
+            margin: 12px 0 20px 0;
         }
     }
 }
