--- a/themes/next/assets/scss/components/forms.scss
+++ b/themes/next/assets/scss/components/forms.scss
@@ -44,17 +44,6 @@
     }
 }
 
-.form-element {
-    margin-bottom: 24px;
-    label {
-        font-size: 14px;
-        font-weight: 500;
-        color: var(--text-dark);
-        margin: 0 0 4px 0;
-        display: block;
-    }
-}
-
 .form-select {
     position: relative;
     select {
@@ -101,6 +90,76 @@
         &:before {
             --scale: .7;
             right: 6px;
+        }
+    }
+}
+
+.form-element {
+    margin-bottom: 20px;
+    @include max(xxs) {
+        margin-bottom: 16px;
+    }
+    label {
+        font-size: 14px;
+        font-weight: 500;
+        color: var(--text-dark);
+        margin: 0 0 4px 0;
+        display: block;
+    }
+}
+
+.form {
+    background: #fff;
+    border-radius: 4px;
+    border: 1px solid var(--border);
+    box-shadow: 0 1px 2px var(--shadow);
+    margin: 24px 0;
+    @include max(xs) {
+        margin: 16px 0 24px 0;
+    }
+    header {
+        padding: 16px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 1px solid var(--line);
+        &:not(:first-child) {
+            border-top: 1px solid var(--line);
+        }
+        @include max(xxs) {
+            padding: 12px;
+        }
+        h3 {
+            margin: 0;
+        }
+    }
+    section {
+        padding: 20px;
+        @include max(xxs) {
+            padding: 16px 12px;
+        }
+    }
+    .form-element {
+        &:last-child {
+            margin-bottom: 0;
+        }
+    }
+    &.horizontal {
+        .form-element {
+            @include min(sm) {
+                display: grid;
+                align-items: center;
+                grid-template-columns: 36% minmax(0, 1fr);
+                label {
+                    margin-bottom: 0;
+                    font-size: 16px;
+                }
+                button {
+                    grid-column: 2;
+                    margin-left: auto;
+                    display: table;
+                }
+            }
         }
     }
 }
