password update markup, style

--- a/themes/next/assets/scss/components/dialog.scss
+++ b/themes/next/assets/scss/components/dialog.scss
@@ -24,6 +24,7 @@
         --s: .98;
         outline: none;
         margin: auto;
+        min-width: 280px;
         padding: 16px 20px;
         background: #fff;
         border-radius: 6px;
