--- a/themes/next/shared/partials/password_update.phtml
+++ b/themes/next/shared/partials/password_update.phtml
@@ -1,24 +1,24 @@
-
 <form method="post" action="password_update.php" autocomplete="off">
-    <table class="firstColFixed">
-        <thead>
-        <tr>
-            <th colspan="3"><?= tohtml(tr('Login data')); ?></th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td><label for="password"><?= tohtml(tr('Password')); ?></label></td>
-            <td><input name="admin_pass" id="password" type="password" value="" class="pwd_generator" autocomplete="new-password" required>
-            </td>
-        </tr>
-        <tr>
-            <td><label for="cpassword"><?= tohtml(tr('Password confirmation')); ?></label></td>
-            <td><input name="admin_pass_confirmation" id="cpassword" type="password" value="" autocomplete="new-password" required></td>
-        </tr>
-        </tbody>
-    </table>
-    <div class="buttons">
-        <input type="submit" name="Submit" value="<?= tohtml(tr('Update', 'htmlAttr')); ?>">
+    <div class="form horizontal">
+        <header>
+            <h3><?=tohtml(tr('Login data')); ?></h3>
+        </header>
+        <section>
+            <div class="form-element">
+                <label for="password"><?=tohtml(tr('Password')); ?></label>
+                <input name="admin_pass" id="password" type="password" value="" class="pwd_generator form-field" autocomplete="new-password" required>
+            </div>
+            <div class="form-element">
+                <label for="cpassword"><?=tohtml(tr('Password confirmation')); ?></label>
+                <input name="admin_pass_confirmation" id="cpassword" class="form-field" type="password" value="" autocomplete="new-password" required>
+            </div>
+            <div class="form-element">
+                <div class="action">
+                    <button class="btn" type="submit" name="Submit">
+                        <?=tohtml(tr('Update')); ?>
+                    </button>
+                </div>
+            </div>
+        </section>
     </div>
 </form>
