add sectionBox general style

--- a/themes/next/admin/users.phtml
+++ b/themes/next/admin/users.phtml
@@ -7,7 +7,7 @@
 </script>
 
 <!-- BDP: administrator_list -->
-<div class="list adminlist">
+<div class="list sectionBox adminlist">
     <header>
         <h3><?=tohtml(tr('Administrator')); ?></h3>
     </header>
@@ -54,7 +54,7 @@
 <!-- EDP: administrator_list -->
 
 <!-- BDP: reseller_list -->
-<div class="list adminlist">
+<div class="list sectionBox adminlist">
     <header>
         <h3><?=tohtml(tr('Resellers')); ?></h3>
     </header>
