--- a/themes/next/assets/scss/sections/general.scss
+++ b/themes/next/assets/scss/sections/general.scss
@@ -309,3 +309,43 @@
         }
     }
 }
+
+.sectionBox {
+    background: #fff;
+    border-radius: 4px;
+    border: 1px solid var(--border);
+    box-shadow: 0 1px 2px var(--shadow);
+    margin: 24px 0;
+    @include max(xs) {
+        margin: 16px 0 24px 0;
+    }
+    header {
+        padding: 16px 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-bottom: 1px solid var(--line);
+        &:not(:first-child) {
+            border-top: 1px solid var(--line);
+        }
+        @include max(xxs) {
+            padding: 12px;
+        }
+        h3 {
+            margin: 0;
+        }
+    }
+    section {
+        padding: 20px;
+        @include max(xxs) {
+            padding: 16px 12px;
+        }
+    }
+    footer {
+        padding: 16px 20px;
+        border-top: 1px solid var(--line);
+        @include max(xxs) {
+            padding: 12px;
+        }
+    }
+}
