--- a/themes/next/shared/partials/client_list.phtml
+++ b/themes/next/shared/partials/client_list.phtml
@@ -1,5 +1,5 @@
 <!-- BDP: client_list -->
-<div class="list clients">
+<div class="list sectionBox clients">
     <header>
         <h3><?=tohtml(tr('Customers')); ?></h3>
         <!-- BDP: client_domain_aliases_switch -->
