--- a/themes/next/shared/partials/password_update.phtml
+++ b/themes/next/shared/partials/password_update.phtml
@@ -1,5 +1,5 @@
 <form method="post" action="password_update.php" autocomplete="off">
-    <div class="form horizontal">
+    <div class="form sectionBox horizontal">
         <header>
             <h3><?=tohtml(tr('Login data')); ?></h3>
         </header>
