--- a/themes/next/shared/partials/personal_change.phtml
+++ b/themes/next/shared/partials/personal_change.phtml
@@ -1,5 +1,5 @@
 <form action="personal_change.php" method="post">
-    <div class="form horizontal">
+    <div class="form sectionBox horizontal">
         <header>
             <h3><?=tohtml(tr('Personal data')); ?></h3>
         </header>
