simple table component, profile overview

--- a/themes/next/assets/scss/style.scss
+++ b/themes/next/assets/scss/style.scss
@@ -15,6 +15,7 @@
 @import 'components/tooltips';
 @import 'components/dropdown';
 @import 'components/dialog';
+@import 'components/table';
 
 @import 'sections/general';
 @import 'sections/simple';
