--- a/themes/next/assets/scss/components/table.scss
+++ b/themes/next/assets/scss/components/table.scss
@@ -2,6 +2,28 @@
 
 .table {
     --columns: 2;
+    &.four-columns {
+        --columns: 4;
+    }
+    .legend {
+        background: var(--pale-light);
+        border-bottom: 1px solid var(--line);
+        @include max(xxs) {
+            display: none;
+        }
+        ul {
+            margin: 0;
+            padding: 8px 20px;
+            list-style: none;
+            display: grid;
+            grid-template-columns: repeat(var(--columns), minmax(0, 1fr));
+            text-transform: uppercase;
+            font-size: 12px;
+            line-height: 14px;
+            font-weight: 500;
+            color: var(--text-light);
+        }
+    }
     & > ul {
         margin: 0;
         padding: 0;
@@ -22,9 +44,29 @@
                 padding: 8px 12px;
             }
             & > div {
+                line-height: 24px;
                 &:first-child {
                     font-weight: 500;
                     color: var(--text-dark);
+                }
+            }
+        }
+    }
+    &.mobile-legend {
+        & > ul {
+            & > li {
+                & > div {
+                    @include max(xxs) {
+                        position: relative;
+                        padding-left: 50%;
+                        &:before {
+                            content: attr(data-legend);
+                            position: absolute;
+                            font-size: 14px;
+                            left: 0;
+                            top: 0;
+                        }
+                    }
                 }
             }
         }
