--- a/themes/next/assets/scss/style.scss
+++ b/themes/next/assets/scss/style.scss
@@ -16,6 +16,7 @@
 @import 'components/dropdown';
 @import 'components/dialog';
 @import 'components/table';
+@import 'components/helper';
 
 @import 'sections/general';
 @import 'sections/simple';
