--- a/themes/next/assets/scss/components/buttons.scss
+++ b/themes/next/assets/scss/components/buttons.scss
@@ -1,10 +1,6 @@
 //main: ../style.scss
 
-.btn {
-    --color: #fff;
-    --background: var(--primary);
-    --shadow-c: var(--primary-shadow);
-    --shadow-blur: 8px;
+@mixin button-reset {
     display: inline-block;
     text-align: center;
     vertical-align: middle;
@@ -12,6 +8,13 @@
     position: relative;
     white-space: nowrap;
     border: none;
+}
+
+.btn {
+    --color: #fff;
+    --background: var(--primary);
+    --shadow-c: var(--primary-shadow);
+    --shadow-blur: 8px;
     padding: 12px 24px;
     font-size: 16px;
     line-height: 23px;
@@ -21,6 +24,7 @@
     border-radius: var(--border-radius);
     box-shadow: 0 4px var(--shadow-blur) var(--shadow-c);
     transition: color .3s ease, background .3s ease, box-shadow .3s ease;
+    @include button-reset;
     &:link,
     &:active,
     &:visited,
