--- a/themes/next/assets/scss/components/table.scss
+++ b/themes/next/assets/scss/components/table.scss
@@ -193,11 +193,28 @@
                             padding-top: 8px;
                             padding-bottom: 8px;
                             @include max(xs) {
+                                font-size: 14px;
                                 display: block;
                                 position: relative;
-                                padding-left: 100px;
+                                padding-left: 108px;
                                 padding-top: 4px;
+                                line-height: 18px;
                                 padding-bottom: 4px;
+                                &:before {
+                                    content: attr(data-th);
+                                    position: absolute;
+                                    text-transform: uppercase;
+                                    font-size: 12px;
+                                    font-weight: 500;
+                                    color: var(--text-light);
+                                    left: 20px;
+                                    max-width: 108px;
+                                    top: 4px;
+                                    line-height: 18px;
+                                    @include max(xxs) {
+                                        left: 12px;
+                                    }
+                                }
                                 &:first-child {
                                     padding-top: 12px;
                                     &:before {
@@ -206,17 +223,6 @@
                                 }
                                 &:last-child {
                                     padding-bottom: 12px;
-                                }
-                                &:before {
-                                    content: attr(data-th);
-                                    position: absolute;
-                                    font-size: 14px;
-                                    left: 20px;
-                                    max-width: 100px;
-                                    top: 4px;
-                                    @include max(xxs) {
-                                        left: 12px;
-                                    }
                                 }
                             }
                         }
