--- a/themes/next/assets/scss/components/table.scss
+++ b/themes/next/assets/scss/components/table.scss
@@ -1,57 +1,6 @@
 //main: ../style.scss
 
 .table {
-    --columns: 2;
-    &.four-columns {
-        --columns: 4;
-    }
-    .legend {
-        background: var(--pale-light);
-        border-bottom: 1px solid var(--line);
-        @include max(xxs) {
-            display: none;
-        }
-        ul {
-            margin: 0;
-            padding: 8px 20px;
-            list-style: none;
-            display: grid;
-            grid-template-columns: repeat(var(--columns), minmax(0, 1fr));
-            text-transform: uppercase;
-            font-size: 12px;
-            line-height: 14px;
-            font-weight: 500;
-            color: var(--text-light);
-        }
-    }
-    & > ul {
-        margin: 0;
-        padding: 0;
-        list-style: none;
-        & > li {
-            display: grid;
-            align-items: center;
-            padding: 12px 20px;
-            grid-gap: 12px;
-            &:not(:last-child) {
-                border-bottom: 1px solid var(--line);
-            }
-            @include min(xxs) {
-                grid-template-columns: repeat(var(--columns), minmax(0, 1fr));
-            }
-            @include max(xxs) {
-                grid-gap: 4px;
-                padding: 8px 12px;
-            }
-            & > div {
-                line-height: 24px;
-                &:first-child {
-                    font-weight: 500;
-                    color: var(--text-dark);
-                }
-            }
-        }
-    }
     .dataTable {
         .toolbar {
             @include sectionHeader;
@@ -141,109 +90,92 @@
                 align-items: center;
             }
         }
-        & > div {
-            & > table {
-                width: 100% !important;
-                th,
-                td {
-                    padding-left: 20px;
-                    padding-right: 20px;
-                    @include max(xxs) {
-                        padding-left: 12px;
-                        padding-right: 12px;
-                    }
-                }
-                thead {
-                    @include max(xs) {
-                        display: none;
-                    }
-                    th {
-                        background: var(--pale-light);
-                        border-bottom: 1px solid var(--line);
-                        padding-top: 8px;
-                        padding-bottom: 8px;
-                        text-transform: uppercase;
-                        font-size: 12px;
-                        line-height: 14px;
-                        font-weight: 500;
-                        color: var(--text-light);
-                        outline: none;
-                        &.sorting,
-                        &.sorting_asc,
-                        &.sorting_desc {
-                            cursor: pointer;
-                        }
-                    }
-                }
-                tbody {
-                    tr {
-                        &:not(:last-child) {
-                            td {
-                                @include min(xs) {
-                                    border-bottom: 1px solid var(--line);
-                                }
-                                &:last-child {
-                                    @include max(xs) {
-                                        border-bottom: 1px solid var(--line);
-                                    }
-                                }
-                            }
-                        }
-                        td {
-                            padding-top: 8px;
-                            padding-bottom: 8px;
-                            @include max(xs) {
-                                font-size: 14px;
-                                display: block;
-                                position: relative;
-                                padding-left: 108px;
-                                padding-top: 4px;
-                                line-height: 18px;
-                                padding-bottom: 4px;
-                                &:before {
-                                    content: attr(data-th);
-                                    position: absolute;
-                                    text-transform: uppercase;
-                                    font-size: 12px;
-                                    font-weight: 500;
-                                    color: var(--text-light);
-                                    left: 20px;
-                                    max-width: 108px;
-                                    top: 4px;
-                                    line-height: 18px;
-                                    @include max(xxs) {
-                                        left: 12px;
-                                    }
-                                }
-                                &:first-child {
-                                    padding-top: 12px;
-                                    &:before {
-                                        top: 12px;
-                                    }
-                                }
-                                &:last-child {
-                                    padding-bottom: 12px;
-                                }
-                            }
-                        }
-                    }
+    }
+    table {
+        --th-width: 50%;
+        width: 100% !important;
+        &.th-small {
+            --th-width: 30%;
+        }
+        th,
+        td {
+            padding-left: 20px;
+            padding-right: 20px;
+            @include max(xxs) {
+                padding-left: 12px;
+                padding-right: 12px;
+            }
+        }
+        thead {
+            @include max(xs) {
+                display: none;
+            }
+            th {
+                background: var(--pale-light);
+                border-bottom: 1px solid var(--line);
+                padding-top: 8px;
+                padding-bottom: 8px;
+                text-transform: uppercase;
+                font-size: 12px;
+                line-height: 14px;
+                font-weight: 500;
+                color: var(--text-light);
+                outline: none;
+                &.sorting,
+                &.sorting_asc,
+                &.sorting_desc {
+                    cursor: pointer;
                 }
             }
         }
-    }
-    &.mobile-legend {
-        & > ul {
-            & > li {
-                & > div {
-                    @include max(xxs) {
+        tbody {
+            tr {
+                &:not(:last-child) {
+                    td {
+                        @include min(xs) {
+                            border-bottom: 1px solid var(--line);
+                        }
+                        &:last-child {
+                            @include max(xs) {
+                                border-bottom: 1px solid var(--line);
+                            }
+                        }
+                    }
+                }
+                td {
+                    padding-top: 8px;
+                    padding-bottom: 8px;
+                    @include max(xs) {
+                        font-size: 14px;
+                        display: block;
                         position: relative;
-                        padding-left: 50%;
+                        padding-left: var(--th-width);
+                        padding-top: 4px;
+                        line-height: 18px;
+                        padding-bottom: 4px;
                         &:before {
-                            content: attr(data-legend);
+                            content: attr(data-th);
                             position: absolute;
-                            font-size: 14px;
-                            left: 0;
-                            top: 0;
+                            text-transform: uppercase;
+                            font-size: 12px;
+                            font-weight: 500;
+                            color: var(--text-light);
+                            left: 20px;
+                            max-width: var(--th-width);
+                            top: 4px;
+                            line-height: 18px;
+                            @include max(xxs) {
+                                left: 12px;
+                            }
+                        }
+                        &:first-child {
+                            padding-top: 12px;
+                            &:before {
+                                top: 12px;
+                            }
+                        }
+                        &:last-child {
+                            padding-bottom: 12px;
                         }
                     }
                 }
