--- a/themes/next/assets/scss/sections/overview.scss
+++ b/themes/next/assets/scss/sections/overview.scss
@@ -14,9 +14,20 @@
     .box {
         padding: 8px 20px;
         background: #fff;
-        border-radius: 3px;
-        box-shadow: 0 1px 4px var(--shadow);
-        border-left: 4px solid var(--primary);
+        border-radius: 4px;
+        position: relative;
+        border: 1px solid var(--line);
+        box-shadow: 0 1px 2px var(--shadow);
+        &:before {
+            content: '';
+            position: absolute;
+            left: -1px;
+            top: -1px;
+            bottom: -1px;
+            width: 4px;
+            border-radius: 4px 0 0 4px;
+            background: var(--primary);
+        }
         strong {
             display: block;
             color: var(--text-dark);
