--- a/themes/next/assets/scss/components/typography.scss
+++ b/themes/next/assets/scss/components/typography.scss
@@ -42,3 +42,13 @@ h3 {
         margin: 8px 0;
     }
 }
+
+h4 {
+    color: var(--text-dark);
+    font-size: 16px;
+    font-weight: bold;
+    margin: 12px 0;
+    @include max(sm) {
+        margin: 8px 0;
+    }
+}
