--- a/themes/next/assets/scss/components/forms.scss
+++ b/themes/next/assets/scss/components/forms.scss
@@ -99,7 +99,7 @@
     @include max(xxs) {
         margin-bottom: 16px;
     }
-    label {
+    & > label {
         margin: 0 0 4px 0;
         @include label;
     }
@@ -173,10 +173,13 @@
         .form-element {
             @include min(sm) {
                 display: grid;
-                align-items: center;
+                align-items: start;
                 grid-template-columns: 36% minmax(0, 1fr);
-                label {
+                min-height: 47px;
+                & > label {
+                    margin-top: 12px;
                     margin-bottom: 0;
+                    line-height: 23px;
                     font-size: 16px;
                 }
                 .action {
@@ -194,12 +197,200 @@
                     grid-column: 2;
                 }
             }
+            .checkbox:first-child,
+            .checkbox.inline,
+            .radio:first-child,
+            .radio.inline,
+            .switch:first-child,
+            .switch.inline {
+                margin-top: 12px;
+            }
         }
         .logo-delete {
             img {
                 @include min(sm) {
                     margin-bottom: 0;
                 }
+            }
+        }
+    }
+}
+
+.checkbox,
+.radio,
+.switch {
+    margin: 0 0 12px 0;
+    display: table;
+    &.inline {
+        margin: 0 12px 0 0;
+        display: inline-block;
+    }
+    input {
+        display: none;
+        & + span {
+            color: var(--text);
+            height: 23px;
+            line-height: 23px;
+            font-size: 16px;
+            position: relative;
+            display: block;
+            &:before,
+            &:after {
+                content: '';
+                display: block;
+                left: 0;
+                top: 0;
+                position: absolute;
+            }
+            &:before {
+                height: 23px;
+                border: 1px solid var(--border);
+                background: #fff;
+                transition: background .3s ease, border-color .3s ease;
+            }
+            &:after {
+                transition: transform .3s ease, opacity .2s ease;
+            }
+        }
+        &:checked + span {
+            &:before {
+                background: var(--primary);
+                border-color: var(--primary);
+            }
+            &:after {
+                transition: opacity .3s ease, transform .6s cubic-bezier(.175, .88, .32, 1.2);
+            }
+        }
+    }
+    &:hover {
+        input {
+            &:not(:checked) + span {
+                &:before {
+                    border-color: var(--border-dark);
+                }
+            }
+        }
+    }
+}
+
+.checkbox,
+.radio {
+    input {
+        & + span {
+            padding-left: 23px;
+            &:not(:empty) {
+                padding-left: 31px;
+            }
+            &:before {
+                width: 23px;
+            }
+            &:after {
+                opacity: 0;
+            }
+        }
+        &:checked + span {
+            &:after {
+                opacity: 1;
+            }
+        }
+    }
+}
+
+.checkbox {
+    input {
+        & + span {
+            &:before {
+                border-radius: 6px;
+            }
+            &:after {
+                width: 6px;
+                height: 10px;
+                border: 2px solid #fff;
+                border-top: 0;
+                border-left: 0;
+                left: 9px;
+                top: 5px;
+                transform: rotate(20deg);
+            }
+        }
+        &:checked + span {
+            &:after {
+                transform: rotate(43deg);
+            }
+        }
+        &:indeterminate + span {
+            &:before {
+                background: var(--primary);
+                border-color: var(--primary);
+            }
+            &:after {
+                width: 11px;
+                left: 5px;
+                height: 3px;
+                border-radius: 2px;
+                top: 9px;
+                background: #fff;
+                border: 0;
+                opacity: 1;
+                transform: rotate(0deg) scaleY(.7);
+            }
+            &:hover {
+                &:before {
+                    border-color: var(--primary);
+                }
+            }
+        }
+    }
+}
+
+.radio {
+    input {
+        & + span {
+            &:before,
+            &:after {
+                border-radius: 50%;
+            }
+            &:after {
+                width: 23px;
+                height: 23px;
+                background: #fff;
+                opacity: 0;
+                transform: scale(.6);
+            }
+        }
+        &:checked + span {
+            &:after {
+                background: #fff;
+                transform: scale(.4);
+            }
+        }
+    }
+}
+
+.switch {
+    input {
+        & + span {
+            padding-left: 41px;
+            &:not(:empty) {
+                padding-left: 49px;
+            }
+            &:before {
+                width: 40px;
+                border-radius: 11px;
+            }
+            &:after {
+                left: 3px;
+                top: 3px;
+                border-radius: 50%;
+                width: 17px;
+                height: 17px;
+                background: var(--border);
+            }
+        }
+        &:checked + span {
+            &:after {
+                background: #fff;
+                transform: translateX(17px) scale(.86);
             }
         }
     }
