forms update, improve css

--- a/themes/next/shared/partials/password_update.phtml
+++ b/themes/next/shared/partials/password_update.phtml
@@ -3,7 +3,7 @@
         <header>
             <h3><?=tohtml(tr('Login data')); ?></h3>
         </header>
-        <section>
+        <section class="two-columns">
             <div class="form-element">
                 <label for="password"><?=tohtml(tr('Password')); ?></label>
                 <input name="admin_pass" id="password" type="password" value="" class="pwd_generator form-field" autocomplete="new-password" required>
@@ -12,7 +12,7 @@
                 <label for="cpassword"><?=tohtml(tr('Password confirmation')); ?></label>
                 <input name="admin_pass_confirmation" id="cpassword" class="form-field" type="password" value="" autocomplete="new-password" required>
             </div>
-            <div class="form-element">
+            <div class="form-element full-width">
                 <div class="action">
                     <button class="btn" type="submit" name="Submit">
                         <?=tohtml(tr('Update')); ?>
