--- a/themes/next/shared/partials/personal_change.phtml
+++ b/themes/next/shared/partials/personal_change.phtml
@@ -62,7 +62,7 @@
                 <label for="fax"><?=tohtml(tr('Fax')); ?></label>
                 <input class="form-field" type="text" name="fax" id="fax" value="<?=tohtml($this->form->getValue('fax'), 'htmlAttr'); ?>">
             </div>
-            <div class="form-element">
+            <div class="form-element full-width">
                 <div class="action">
                     <button class="btn" name="Submit" type="submit">
                         <?=tohtml(tr('Update'), 'htmlAttr'); ?>
