--- a/themes/next/assets/scss/components/dialog.scss
+++ b/themes/next/assets/scss/components/dialog.scss
@@ -1,6 +1,7 @@
 //main: ../style.scss
 
 #overlay {
+    --max-width: 380px;
     position: fixed;
     left: 0;
     top: 0;
@@ -24,7 +25,9 @@
         --s: .98;
         outline: none;
         margin: auto;
+        width: 100%;
         min-width: 280px;
+        max-width: var(--max-width);
         padding: 16px 20px;
         background: #fff;
         border-radius: 6px;
@@ -36,7 +39,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 8px;
+            margin-bottom: 12px;
             .ui-dialog-title {
                 color: var(--text-dark);
                 font-size: 18px;
@@ -74,7 +77,10 @@
             }
         }
         .ui-dialog-content {
-            margin-bottom: 16px;
+            margin-bottom: 20px;
+            .message-container {
+                margin: 0 0 12px 0;
+            }
         }
         .ui-dialog-buttonpane {
             button {
