--- a/themes/next/assets/scss/components/forms.scss
+++ b/themes/next/assets/scss/components/forms.scss
@@ -117,15 +117,63 @@
     }
 }
 
-.form {
-    section {
-        h4 {
-            margin-top: 0;
-            margin-bottom: 20px;
-            @include max(xxs) {
-                margin-bottom: 16px;
-            }
+.form-group {
+    position: relative;
+    width: 100%;
+    display: flex;
+    & > span,
+    .form-field,
+    .btn {
+        white-space: nowrap;
+        &:not(:first-child):not(:last-child) {
+            border-radius: 0;
         }
+        &:first-child {
+            border-radius: var(--border-radius) 0 0 var(--border-radius);
+        }
+        &:last-child {
+            border-radius: 0 var(--border-radius) var(--border-radius) 0;
+        }
+        &:not(:first-child) {
+            margin-left: -1px;
+        }
+    }
+    .form-field {
+        position: relative;
+        z-index: 1;
+        width: 1%;
+        margin-bottom: 0;
+        flex: 1 1 auto;
+    }
+    & > span {
+        margin-bottom: 0;
+        text-align: center;
+        border: 1px solid var(--border);
+        padding: 12px;
+        min-width: 60px;
+        font-size: 14px;
+        font-weight: 500;
+        background: var(--pale);
+        transition: background .3s ease, border-color .3s ease;
+    }
+    &.focus {
+        & > span {
+            color: var(--primary);
+            background: var(--primary-pale);
+            border-color: var(--primary);
+        }
+    }
+}
+
+.form {
+    h4 {
+        margin-top: 0;
+        margin-bottom: 20px;
+        @include max(xxs) {
+            margin-bottom: 16px;
+        }
+    }
+    section {
         &.two-columns {
             @include min(lg) {
                 display: grid;
@@ -140,7 +188,7 @@
                 }
                 h4 {
                     grid-column: 1 / 3;
-                    margin-bottom: 0;
+                    margin-bottom: 8px;
                 }
             }
         }
@@ -182,6 +230,10 @@
                     line-height: 23px;
                     font-size: 16px;
                 }
+                .align-right {
+                    display: flex;
+                    justify-content: flex-end;
+                }
                 .action {
                     grid-column: 2;
                     margin-left: auto;
@@ -205,6 +257,16 @@
                 &.switch:first-child,
                 &.switch.inline {
                     margin-top: 12px;
+                    @include max(sm) {
+                        margin-top: 8px;
+                    }
+                }
+            }
+        }
+        &.small-value {
+            .form-element {
+                @include min(sm) {
+                    grid-template-columns: 72% minmax(0, 1fr);
                 }
             }
         }
